--- a/backend/blogsite/templates/blog/post_detail.html
+++ b/backend/blogsite/templates/blog/post_detail.html
@@ -8,12 +8,12 @@
     <title>blog/post_detail.html</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  <link href="/static/css/chunk-vendors.47ab4cdf.css" rel="preload" as="style"><link href="/static/js/chunk-vendors.1af09072.js" rel="preload" as="script"><link href="/static/js/post_detail.8065157a.js" rel="preload" as="script"><link href="/static/css/chunk-vendors.47ab4cdf.css" rel="stylesheet"></head>
+  <link href="/static/css/chunk-vendors.47ab4cdf.css" rel="preload" as="style"><link href="/static/css/post_detail.97606f97.css" rel="preload" as="style"><link href="/static/js/chunk-vendors.28f63587.js" rel="preload" as="script"><link href="/static/js/post_detail.0067582a.js" rel="preload" as="script"><link href="/static/css/chunk-vendors.47ab4cdf.css" rel="stylesheet"><link href="/static/css/post_detail.97606f97.css" rel="stylesheet"></head>
   <body>
     <noscript>
       <strong>We're sorry but blog/post_detail.html doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  <script type="text/javascript" src="/static/js/chunk-vendors.1af09072.js"></script><script type="text/javascript" src="/static/js/post_detail.8065157a.js"></script></body>
+  <script type="text/javascript" src="/static/js/chunk-vendors.28f63587.js"></script><script type="text/javascript" src="/static/js/post_detail.0067582a.js"></script></body>
 </html>
